# anvil

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  release.yml
src/: main.rs  plugin.rs  server.rs
src/api/: mod.rs  modrinth.rs  paper.rs  vanilla.rs
