[package]
name = "anvil"
version = "0.1.0"
description = "A CLI tool to create and manager minecraft servers on the fly."
authors = ["justpandaz"]
license = "MIT"
keywords = ["cli", "tool", "minecraft"]
edition = "2024"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.16", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indicatif = "0.17"
dialoguer = "0.11"
dirs = "6.0.0"
futures-util = "0.3.31"
sha1 = "0.11.0-pre.5"
hex = "0.4.3"
urlencoding = "2.1.3"
